@@ -3,6 +3,16 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2007-09-18	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-81-75-CHP-03-04:
+	  Implemented a contextual CHP event printer, first draft looks good.
+		Needs rigorous testing...
+	  Added dump-event-source command to chpsim to print this.
+	  Minor bugfix, initialize CHP::action::parent to NULL.
+	  TODO: add to guile API.
+
+
 2007-09-16	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-81-75-CHP-03-03:
